--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
         .hero {
             background-size: cover !important;
             background-position: center center !important;
-            min-height: 500px !important;
+            min-height: 350px !important;
         }
     }
     @media screen and (max-width: 480px) {
         .hero {
             background-size: cover !important;
             background-position: center 30% !important;
-            min-height: 450px !important;
-            padding: 2rem 0 !important;
+            min-height: 300px !important;
+            padding: 1.5rem 0 !important;
         }
         .hero-title {
-            font-size: 1.8rem !important;
+            font-size: 1.6rem !important;
+            margin-bottom: 0.5rem !important;
         }
         .hero-subtitle {
-            font-size: 0.95rem !important;
+            font-size: 0.85rem !important;
+            margin-bottom: 1rem !important;
         }
     }
     
@@ -167,7 +169,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 OBYY-ARSIP. All rights reserved.</p>
+            <p>&copy; 2024 OBYY-Archive. All rights reserved.</p>
         </div>
     </footer>
 
