--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     /* HERO BACKGROUND FIX */
     @media screen and (max-width: 768px) {
         .hero {
-            background-size: cover !important;
-            background-position: center center !important;
+            background-size: 100% 100%, cover !important;
+            background-position: center, center !important;
             min-height: 350px !important;
         }
     }
     @media screen and (max-width: 480px) {
         .hero {
-            background-size: cover !important;
-            background-position: center 30% !important;
+            background-size: 100% 100%, cover !important;
+            background-position: center, center 30% !important;
             min-height: 300px !important;
             padding: 1.5rem 0 !important;
         }
