--- a/index.html
+++ b/index.html
@@ -17,23 +17,37 @@
         .hero {
             background-size: 100% 100%, cover !important;
             background-position: center, center !important;
-            min-height: 350px !important;
+            min-height: 420px !important;
         }
     }
     @media screen and (max-width: 480px) {
         .hero {
             background-size: 100% 100%, cover !important;
             background-position: center, center 30% !important;
-            min-height: 300px !important;
-            padding: 1.5rem 0 !important;
+            min-height: 320px !important;
+            padding: 1.8rem 0 !important;
         }
         .hero-title {
             font-size: 1.6rem !important;
-            margin-bottom: 0.5rem !important;
         }
         .hero-subtitle {
-            font-size: 0.85rem !important;
-            margin-bottom: 1rem !important;
+            font-size: 0.88rem !important;
+        }
+        /* Search button fix — inline final authority */
+        .search-box {
+            padding: 0 !important;
+        }
+        .search-input {
+            padding: 0.7rem 2.4rem 0.7rem 0.9rem !important;
+        }
+        .search-btn {
+            right: 5px !important;
+            width: 28px !important;
+            height: 28px !important;
+        }
+        .search-btn svg {
+            width: 16px !important;
+            height: 16px !important;
         }
     }
     
